// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Merkur component loadScriptAssets() function should create script elements for script assets 1`] = `
Array [
  Object {
    "addEventListener": [MockFunction],
    "async": "",
    "custom-element": "amp-fx-collection",
    "onerror": [Function],
    "onload": [Function],
    "removeAttribute": [Function],
    "setAttribute": [Function],
    "src": "http://localhost:4444/static/es11/widget.6541af42bfa3596bb129.js",
  },
  Object {
    "addEventListener": [MockFunction],
    "defer": true,
    "onerror": [Function],
    "onload": [Function],
    "removeAttribute": [Function],
    "setAttribute": [Function],
    "src": "http://localhost:4444/static/es5/undefined.6961af42bfa3596bb147.js",
  },
  Object {
    "addEventListener": [MockFunction],
    "defer": true,
    "onerror": [Function],
    "onload": [Function],
    "removeAttribute": [Function],
    "setAttribute": [Function],
    "src": "http://localhost:4444/static/es5/polyfill.6961af42bfa3596bb147.js",
  },
  Object {
    "addEventListener": [MockFunction],
    "onerror": [MockFunction],
    "onload": [MockFunction] {
      "calls": Array [
        Array [],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    },
    "removeAttribute": [Function],
    "setAttribute": [Function],
    "text": "alert();",
  },
]
`;

exports[`Merkur component loadStyleAssets() function should create style elements for style assets 1`] = `
Array [
  Object {
    "addEventListener": [MockFunction],
    "href": "http://localhost:4444/static/es9/widget.814e0cb568c7ddc0725d.css",
    "onerror": [Function],
    "onload": [Function],
    "rel": "stylesheet",
    "removeAttribute": [Function],
    "setAttribute": [Function],
  },
  Object {
    "addEventListener": [MockFunction],
    "innerHTML": ".cssClass { margin-top: 5px; }",
    "onerror": [MockFunction],
    "onload": [MockFunction] {
      "calls": Array [
        Array [],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    },
    "removeAttribute": [Function],
    "setAttribute": [Function],
  },
]
`;
